@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Take order email from the options hash instead of the address for CyberSource [cody]
+#
 # * Use an array for LineItems when calculating tax in CyberSource gateway [cody]
 #
 # * Add CyberSource gateway [Matt Margolis]
